[package]
authors = ["Quoc-Anh Vu <quoc.v.anh@gmail.com>"]
categories = ["encoding", "no-std"]
description = "A binary-to-text encoding scheme for hashes and cryptographic keys."
documentation = "https://docs.rs/emoji256/"
edition = "2021"
exclude = ["python/"]
keywords = ["no_std", "emoji256", "binary-to-text", "emoji", "emojis"]
license = "MIT OR Apache-2.0"
name = "emoji256"
readme = "README.md"
repository = "https://github.com/QuocAnhVu/emoji256"
version = "0.2.0"
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges.maintenance]
status = "actively-developed"

[features]
alloc = []
default = ["std"]
std = ["alloc"]

[[bench]]
harness = false
name = "emoji256"

[dependencies.serde]
default-features = false
optional = true
version = "1.0"
[dev-dependencies.criterion]
version = "0.4"

[dev-dependencies.pretty_assertions]
version = "1.3"

[dev-dependencies.rustc-hex]
version = "2.1"

[dev-dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.version-sync]
version = "0.9"
